Post-v3.6.0
--------------------


v3.6.0 - xx xxx xxxx
--------------------
   - Bonding:
     * Bond rebalancing log messages of INFO log level are highly reduced: they
       are now printed once in rebalance run.  Previous detailed log messages
       have been moved to the DBG log level.
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
     * Removed upper limit for the number of rx/tx descriptors (n_r/txq_desc).
     * OVS validated with DPDK 24.11.2.
   - OVSDB-IDL:
     * New functions <db>_<table>_<column>_server_type() that allow checking
       the server-side type of a particular column.  Can be used for checking
       type constraints when the server schema is older or newer than that of
       the client.
   - ovs-ctl:
     * Added a new option, --oom-score=<score>, to set the daemons' Linux
       Out-Of-Memory (OOM) killer score.
     * Added a new option, --ulimit-core=<LIMIT>, to set the daemon's ulimit
       core file size.
   - ovs-appctl:
     * Added JSON output support to the 'ovs/route/show' command.
   - ovs-vsctl:
     * Now exits with error code 160 (ERROR_BAD_ARGUMENTS) on Windows and
       65 (EX_DATAERR) on other platforms if it fails while waiting for
       ovs-vswitchd to finish reconfiguring itself after a successful
       database transaction.  E.g., when ovs-vswitchd fails to add a new
       port or a bridge.
     * Added '--filter' option to the 'show' command.
   - SSL/TLS:
     * Support for deprecated TLSv1 and TLSv1.1 protocols on OpenFlow and
       database connections is now removed.
   - Tunnels:
     * Support for previously deprecated LISP and STT tunnel port types
       is now removed.
   - ovs-tcpdump:
     * Update the --mirror-to option, adding support for specifying an
       existing port as a mirror interface.
   - Added support for running tests from 'check-kernel' and 'check-offloads'
     system test targets under retis by setting OVS_TEST_WITH_RETIS=yes.