@@ -1,5 +1,8 @@
 Post-v3.6.0
 --------------------
+   - Userspace datapath:
+     * Conntrack now supports the FTP commands EPSV and EPRT with IPv4
+       connections, instead of limiting these commands to IPv6 only.
 
 
 v3.6.0 - xx xxx xxxx
